src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>All information is complete%2E</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Auto Decline-To Processing</fullName>
        </values>
        <values>
            <fullName>B - Quote Submitted</fullName>
        </values>
        <values>
            <fullName>C - Offer Accepted - Awaiting Compl Apps</fullName>
        </values>
        <values>
            <fullName>C-1 Contract Signed - More Info Needed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contact Made - Follow Up</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Declined - Pending Mgmt Review</fullName>
        </values>
        <values>
            <fullName>NO Contact Made</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Pending Management Review</fullName>
        </values>
        <values>
            <fullName>Pre-Qual FAIL</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass Credit Only</fullName>
        </values>
        <values>
            <fullName>Pre-Qual in Progress</fullName>
        </values>
        <values>
            <fullName>Repriced</fullName>
        </values>
        <values>
            <fullName>Rescinded by RapidAdvance</fullName>
        </values>
        <values>
            <fullName>Signed Contract Rescinded by Merchant</fullName>
        </values>
        <values>
            <fullName>Statements Rec%27d Follow Up</fullName>
        </values>
        <values>
            <fullName>Submitted Deal</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unqualified - Will Reconsider Later</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GreenTree</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Auto Decline-To Processing</fullName>
        </values>
        <values>
            <fullName>B - Quote Submitted</fullName>
        </values>
        <values>
            <fullName>C - Offer Accepted - Awaiting Compl Apps</fullName>
        </values>
        <values>
            <fullName>C-1 Contract Signed - More Info Needed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contact Made - Follow Up</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Declined - Pending Mgmt Review</fullName>
        </values>
        <values>
            <fullName>NO Contact Made</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Pending Management Review</fullName>
        </values>
        <values>
            <fullName>Pre-Qual FAIL</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass Credit Only</fullName>
        </values>
        <values>
            <fullName>Pre-Qual in Progress</fullName>
        </values>
        <values>
            <fullName>Repriced</fullName>
        </values>
        <values>
            <fullName>Rescinded by RapidAdvance</fullName>
        </values>
        <values>
            <fullName>Signed Contract Rescinded by Merchant</fullName>
        </values>
        <values>
            <fullName>Statements Rec%27d Follow Up</fullName>
        </values>
        <values>
            <fullName>Submitted Deal</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unqualified - Will Reconsider Later</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Sales Process - 11-26-07</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Auto Decline-To Processing</fullName>
        </values>
        <values>
            <fullName>B - Quote Submitted</fullName>
        </values>
        <values>
            <fullName>C - Offer Accepted - Awaiting Compl Apps</fullName>
        </values>
        <values>
            <fullName>C-1 Contract Signed - More Info Needed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contact Made - Follow Up</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Declined - Pending Mgmt Review</fullName>
        </values>
        <values>
            <fullName>NO Contact Made</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Pending Management Review</fullName>
        </values>
        <values>
            <fullName>Pre-Qual FAIL</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass Credit Only</fullName>
        </values>
        <values>
            <fullName>Pre-Qual in Progress</fullName>
        </values>
        <values>
            <fullName>Repriced</fullName>
        </values>
        <values>
            <fullName>Rescinded by RapidAdvance</fullName>
        </values>
        <values>
            <fullName>Signed Contract Rescinded by Merchant</fullName>
        </values>
        <values>
            <fullName>Statements Rec%27d Follow Up</fullName>
        </values>
        <values>
            <fullName>Submitted Deal</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unqualified - Will Reconsider Later</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Old Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Auto Decline-To Processing</fullName>
        </values>
        <values>
            <fullName>B - Quote Submitted</fullName>
        </values>
        <values>
            <fullName>C - Offer Accepted - Awaiting Compl Apps</fullName>
        </values>
        <values>
            <fullName>C-1 Contract Signed - More Info Needed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contact Made - Follow Up</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Declined - Pending Mgmt Review</fullName>
        </values>
        <values>
            <fullName>NO Contact Made</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Pending Management Review</fullName>
        </values>
        <values>
            <fullName>Pre-Qual FAIL</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass Credit Only</fullName>
        </values>
        <values>
            <fullName>Repriced</fullName>
        </values>
        <values>
            <fullName>Rescinded by RapidAdvance</fullName>
        </values>
        <values>
            <fullName>Signed Contract Rescinded by Merchant</fullName>
        </values>
        <values>
            <fullName>Statements Rec%27d Follow Up</fullName>
        </values>
        <values>
            <fullName>Submitted Deal</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unqualified - Will Reconsider Later</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Stage Date</fullName>
        <description>Date stage was changed</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>B - Quote Submitted</fullName>
        </values>
        <values>
            <fullName>C - Offer Accepted - Awaiting Compl Apps</fullName>
        </values>
        <values>
            <fullName>C-1 Contract Signed - More Info Needed</fullName>
        </values>
        <values>
            <fullName>Contact Made - Follow Up</fullName>
        </values>
        <values>
            <fullName>Declined - Pending Mgmt Review</fullName>
        </values>
        <values>
            <fullName>Pending Management Review</fullName>
        </values>
        <values>
            <fullName>Pre-Qual FAIL</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass</fullName>
        </values>
        <values>
            <fullName>Pre-Qual Pass Credit Only</fullName>
        </values>
        <values>
            <fullName>Pre-Qual in Progress</fullName>
        </values>
        <values>
            <fullName>Repriced</fullName>
        </values>
        <values>
            <fullName>Submitted Deal</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACH_Confirmed__c</fullName>
        <label>ACH Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACH_Requested__c</fullName>
        <label>ACH Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AE_Calculator_Average__c</fullName>
        <label>AE Calculator Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AE_Commission__c</fullName>
        <label>AE Commission</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AE_Primary_Signer_Info__c</fullName>
        <formula>&quot;Primary Contact Info:&quot;&amp; BR() 
&amp; &quot;Full Name: &quot;&amp; Contact__r.FirstName &amp; &quot; &quot; &amp;Contact__r.LastName &amp; BR() 
&amp; &quot;Ownership: &quot;&amp; text( Contact__r.OwnershipPercentage__c*100 )&amp;&quot;%&quot;&amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp; Contact__r.Principal_1_Street_Address__c &amp; BR() 
&amp; Contact__r.Principal_1_City__c &amp;&quot;, &quot;&amp; Contact__r.Principal_1_State__c &amp;&quot; &quot;&amp; Contact__r.Principal_1_Zip__c &amp; BR() 
&amp; &quot;Business Phone: &quot;&amp; Contact__r.Phone  &amp; BR() 
&amp; &quot;Home Phone: &quot;&amp; Contact__r.Principal_Home_Phone__c &amp; BR() 
&amp; &quot;Mobile: &quot;&amp; Contact__r.MobilePhone &amp; BR() 
&amp; &quot;Fax: &quot;&amp;Contact__r.Fax&amp; BR() 
&amp; &quot;Email: &quot;&amp; Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Primary Signer Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMEX_ONLY_GCS_MID_1__c</fullName>
        <label>AMEX ONLY GCS MID #1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMEX_ONLY_GCS_MID_2__c</fullName>
        <label>AMEX ONLY GCS MID #2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acc_Roll_up_Approval__c</fullName>
        <formula>Account.Roll_up_Approved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Roll up Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Rapid_Funding__c</fullName>
        <label>Accepted Rapid Funding?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Database_Entry_Days_Count_del__c</fullName>
        <description>New formula</description>
        <formula>(TODAY()-Account_Database_Entry_Due_Date__c)  - (NOW()-Account_Database_Entry__c)</formula>
        <label>Account Database Entry - Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Database_Entry_Due_Date__c</fullName>
        <label>Account Database Entry Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Database_Entry_Flag__c</fullName>
        <formula>IMAGE( 
IF(AND(ISNULL( Account_Database_Entry__c  ),  Account_Database_Entry_Due_Date__c &lt; TODAY()), &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Database Entry Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Database_Entry__c</fullName>
        <label>Account Database Entry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_In_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account In Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number_For_Funding__c</fullName>
        <label>Wire Bank Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Set_Up_Green_R_Completed__c</fullName>
        <label>Acct Set Up Green R Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acct_Set_Up_Green_R_Started__c</fullName>
        <label>Acct Set Up Green R Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_on_check_matches_Acc_Info__c</fullName>
        <label>Add on check matches Acc Info?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Contact_Info__c</fullName>
        <formula>&quot;Additional Contact Info:&quot;&amp; BR() 
&amp; &quot;Full Name:  &quot;&amp;  Contact__r.Principal_2_First_Name__c  &amp; &quot;   &quot; &amp; Contact__r.Principal_2_Last_Name__c  &amp; BR() 
&amp; &quot;Ownership:   &quot;&amp; text(Contact__r.Principal_2_Percent_Ownership__c*100)&amp;&quot;%&quot;&amp; BR() 
&amp; &quot;Address:&quot;&amp; BR() 
&amp; Contact__r.Principal_2_Street_Address__c &amp; BR() 
&amp; Contact__r.Principal_2_City__c &amp;&quot;,  &quot;&amp; Contact__r.Principal_2_State__c &amp;&quot;   &quot;&amp; Contact__r.Principal_2_Zip__c &amp; BR() 
&amp; &quot;Phone:   &quot;&amp;  Contact__r.Principal_2_Phone__c  &amp; BR()
&amp; &quot;Mobile:   &quot;&amp; Contact__r.Principal_2_Mobile__c &amp; BR()
&amp; &quot;Email:   &quot;&amp; Contact__r.Principal_2_Email__c &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Signer Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Location_Information__c</fullName>
        <formula>&quot;Location 2:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account.Location_2_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account.Location_2_Address__c &amp; BR() &amp; BR()
&amp; &quot;Location 3:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account.Location_3_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account.Location_3_Address__c &amp; BR() &amp; BR()
&amp; &quot;Location 4:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account.Location_4_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account.Location_4_Address__c &amp; BR()
&amp; &quot;Location 5:&quot;&amp; BR()
&amp; &quot;    DBA Name: &quot;&amp;  Account.Location_1_DBA_NAME__c  &amp; BR()
&amp; &quot;    Address:&quot;&amp;  Account.Location_1_Address__c &amp; BR() &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Location Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Signer_SSN__c</fullName>
        <formula>Contact__r.Principal_2_Social_Security_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Signer SSN:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressOnCheckIf_no_please_explain__c</fullName>
        <label>If, no please explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_on_Check_Match_Bank_Statement__c</fullName>
        <label>Address on Check Match Bank Statement</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_on_Check_Match_CC_statements__c</fullName>
        <label>Address on Check Match CC statements</label>
        <picklist>
            <picklistValues>
                <fullName>NA Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_on_Check_Match_FRSA__c</fullName>
        <label>Address on Check Match FRSA</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advance_Amount__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_ID_PO__c</fullName>
        <formula>If_Renewal_Preceding_Opportunity__r.Advance_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance ID (PO)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_ID__c</fullName>
        <externalId>true</externalId>
        <label>Advance ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Advance_Payoff_Date__c</fullName>
        <description>Date the advance was paid off 100%.</description>
        <label>Advance Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_amount_requested__c</fullName>
        <label>Advance amount requested?</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_terms_match_FRSA__c</fullName>
        <label>Advance terms match FRSA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Approved_With_Conditions_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Approved With Conditions Met:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Approved_With_Conditions_Met_date__c</fullName>
        <description>Auto-populates via workflow when the &quot;All Approved With Conditions Met&quot; checkbox is checked</description>
        <label>All Approved With Conditions Met Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>All_card_types_set_up_to_be_Captured__c</fullName>
        <label>All card types set up to be Captured?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_necessary_site_inspections_ordered__c</fullName>
        <label>All necessary site inspections ordered?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_FOR_GRAPHS__c</fullName>
        <formula>ROUND(Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Graphs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Sold_PO__c</fullName>
        <formula>If_Renewal_Preceding_Opportunity__r.Pay_Back_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Sold (PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_CC_sales_Avg_4_Mo_times_12__c</fullName>
        <label>Annual CC sales (Avg 4 Mo. times 12):</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Gross_sales_Avg_2_Mo_times_12__c</fullName>
        <label>Annual Gross sales (Avg 2 Mo. times 12):</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_New_Competitor_Tag__c</fullName>
        <label>Any New Competitor Tag?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_New_UCC_Found__c</fullName>
        <label>Any New UCC Found?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_delinquencies_in_the_rental_payment__c</fullName>
        <label>Any delinquencies in the rental payment?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_2_FICO__c</fullName>
        <label>Applicant #2 FICO</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Entry_Time__c</fullName>
        <label>PreQual Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Time__c</fullName>
        <formula>Pre_Qual_Decision_Date__c - Approval_Process_Entry_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Process Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Rate__c</fullName>
        <formula>Approved_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <formula>if( Approved_Flag__c =1, Advance_Amount__c ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Flag__c</fullName>
        <formula>if(OR(ISPICKVAL( Underwriting_Approval__c , &quot;Approved&quot;),ISPICKVAL( Underwriting_Approval__c ,&quot;Approved by Credit Committee&quot;),ISPICKVAL( Underwriting_Approval__c , &quot;Approved by Credit Committee but change in advance amount and split&quot;),ISPICKVAL( Underwriting_Approval__c , &quot;Approved by Credit Committee but change in split&quot;),ISPICKVAL( Underwriting_Approval__c , &quot;Approved by Credit Committee with conditions&quot;),ISPICKVAL( Underwriting_Approval__c , &quot;Approved - Pending Management Review&quot;),ISPICKVAL( Underwriting_Approval__c , &quot;Auto Approved&quot;),ISPICKVAL( Underwriting_Approval__c , &quot;Approved by Credit Committee but change in advance amount&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_With_Conditions__c</fullName>
        <label>Approved With Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approximate_Wire_Amount__c</fullName>
        <formula>if(Renewal__c,Amount- Previous_Balance__c - Renewal_Payoff_PO__c ,Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approximate Wire Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archived_Credit_Bureau__c</fullName>
        <label>Archived Credit Bureau</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_card_types_selected_correct__c</fullName>
        <label>Are card types selected correct?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_there_any_Competitor_Debits__c</fullName>
        <description>Do the Bank Statements reference any Competitor Debits or Deposits? YES OR NO 
If, yes please explain</description>
        <label>Are there any Competitor Transactions?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_there_any_Odd_Large_Deposits__c</fullName>
        <description>Do the Bank Statements reference any Odd Large Deposits or Transfers? YES OR NO 
If, yes please explain</description>
        <label>Are there Odd Big Deposits or Transfers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_there_special_wiring_instructions__c</fullName>
        <label>Are there special wiring instructions?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AsOfDate_for_Remaining_Balance__c</fullName>
        <label>AsOfDate for Remaining Balance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assign_UW_Time_hrs__c</fullName>
        <formula>if 

( isnull ( QC_Decision_Date__c ) ,NULL , 


IF

(ABS((UW_Assigned_Date_Stamp__c - QC_Decision_Date__c)*24)&gt;10,

ABS(((UW_Assigned_Date_Stamp__c - QC_Decision_Date__c)*24)-14),


(UW_Assigned_Date_Stamp__c - QC_Decision_Date__c)*24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign UW Time (hrs)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Decisioned_By__c</fullName>
        <label>Auto Decisioned By</label>
        <picklist>
            <picklistValues>
                <fullName>AH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Survey_ID__c</fullName>
        <label>Auto Survey ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Repay__c</fullName>
        <label>Avg. Daily Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_VISA_MC_Volume__c</fullName>
        <label>Average Monthly VISA/MC Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Ticket__c</fullName>
        <label>Average Ticket</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; $15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$16 - $25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$26 - $49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50 - $75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_Daily_Amount_PO__c</fullName>
        <formula>If_Renewal_Preceding_Opportunity__r.Average_Daily_Repay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Daily Amount (PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Transactions__c</fullName>
        <description>Avg Monthly Transactions</description>
        <label>Avg Monthly Transactions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAM_Match_Selection__c</fullName>
        <label>BAM Match?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>